--- a/lab1.html
+++ b/lab1.html
@@ -9,9 +9,9 @@
 <body>
   <h1> All About Chocolate </h1>
 
-  <p> This page is all about <a href="https://en.wikipedia.org/wiki/Chocolate">chocolate!</a></p>
+  <p> This page is all about <a class="hover" href="https://en.wikipedia.org/wiki/Chocolate">chocolate!</p></a>
 
-  <p> Chocolate is the best food in the world, because it can be made into a drink, a paste,
+  <p id="important_paragraph"> Chocolate is the best food in the world, because it can be made into a drink, a paste,
   or eaten plain! </p>
 
   <p> According to Wikipedia, the earliest people to eat chocolate, that we know about were the
