--- a/lab2-centering.html
+++ b/lab2-centering.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+  
+
   <h1> All About Chocolate </h1>
 
   <p> This page is all about <a href="https://en.wikipedia.org/wiki/Chocolate">chocolate!</a></p>
@@ -14,7 +16,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Chocolate_%28blue_background%29.jpg/200px-Chocolate_%28blue_background%29.jpg">
 
 
-<br>
+  <br>
   Chocolate is the best food in the world, because it can be made into a drink, a paste,
   or eaten plain!
 
@@ -29,6 +31,17 @@
 	  	<input placeholder="all kinds">
   	</div>
   </form>
+
+
+
+
+<!-- Link to my website -->
+
+
+
+
+
+
 
 </body>
 
